# humanofi

./: .env.example  .gitignore  .mocharc.cjs  Anchor.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  check_curve.js  globals.css  package-lock.json  package.json  tsconfig.json  vercel.json
apps/web/: README.md  next.config.ts  package.json
programs/humanofi/: Cargo.toml  README.md
programs/humanofi/src/: constants.rs  errors.rs  lib.rs
programs/humanofi/src/instructions/: admin.rs  buy.rs  claim_creator_fees.rs  claim_rewards.rs  create_token.rs  mod.rs  record_engagement.rs  sell.rs  unlock_tokens.rs
programs/humanofi/src/state/: bonding_curve.rs  creator_fee_vault.rs  creator_vault.rs  engagement_record.rs  mod.rs  protocol_config.rs  protocol_vault.rs  purchase_limiter.rs  reward_pool.rs
programs/humanofi/src/utils/: math.rs  mod.rs  tests.rs
supabase/: README.md  migration_beta.sql  schema.sql
supabase/migrations/: 00001_initial_schema.sql  001_profiles_and_storage.sql  002_beta_adjustments.sql  003_engagement.sql  004_rich_posts.sql  005_inner_circle_v2.sql  006_public_posts.sql  007_questions.sql  008_fix_constraints.sql  009_archive_posts.sql  010_oracle_prices.sql  011_activity_score_v3.sql  012_price_snapshots.sql  013_creator_profile_fields.sql  014_post_views.sql  015_align_categories.sql  016_trades.sql  017_security_fixes.sql  018_exclusive_drops.sql  020_creator_drafts.sql  021_admin_moderation.sql  025_addiction_engine.sql  026_token_symbol.sql  030_feed_maintenance.sql
tests/: README.md  audit-fee-vault.ts  audit-onchain.ts  humanofi.ts
(+149 files in other folders)
