[package]
name = "humanofi"
version = "0.1.0"
description = "Humanofi Protocol — The first market where humans are the asset"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "humanofi"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
